# authorship_attribution

./: .gitignore  README.md  main.py  presentation.pptx  pyproject.toml  requirements.txt
data/english/Anthony_Trollope/: An Autobiography of Anthony Trollope.txt  An Old Man's Love.txt  Barchester Towers.txt  Can You Forgive Her.txt  Doctor Thorne.txt  He Knew He Was Right.txt  The Life of Cicero, Volume II..txt  (+4 more)
data/test_samples/: Anthony_Trollope_EN.txt  Arthur_Conan_Doyle_EN.txt  Bram_Stoker_EN.txt  Charles_Dickens_EN.txt  Charlotte_Bronte_EN.txt  Edgar_Allan_Poe_EN.txt  G_K__Chesterton_EN.txt  H_G__Wells_EN.txt  Herman_Melville_EN.txt  Jack_London_EN.txt  Jane_Austen_EN.txt  John_Milton_EN.txt  Lewis_Carroll_EN.txt  Louisa_May_Alcott_EN.txt  Mark_Twain_EN.txt  Nathaniel_Hawthorne_EN.txt  Oscar_Wilde_EN.txt  P_G__Wodehouse_EN.txt  Robert_Louis_Stevenson_EN.txt  Rudyard_Kipling_EN.txt  Thomas_Hardy_EN.txt  Walt_Whitman_EN.txt  Wilkie_Collins_EN.txt  William_Shakespeare_EN.txt  Александр_Куприн_RU.txt  Александр_Островский_RU.txt  Александр_Пушкин_RU.txt  Антон_Чехов_RU.txt  Владимир_Короленко_RU.txt  Иван_Бунин_RU.txt  Иван_Гончаров_RU.txt  Иван_Тургенев_RU.txt  Лев_Толстой_RU.txt  Максим_Горький_RU.txt  Михаил_Лермонтов_RU.txt  Михаил_Салтыков-Щедрин_RU.txt  Николай_Гоголь_RU.txt  Николай_Лесков_RU.txt  Фёдор_Достоевский_RU.txt
models/: training_config.json
src/: config.py  features.py  loader.py  persistence.py  trainer.py
src/classifiers/: __init__.py  base.py  logistic_regression.py  random_forest.py  svm.py
src/ui/: app.py  main_window.py  theme.py
(+445 files in other folders)
