[project]
name = "authorship-attribution"
version = "0.1.0"
description = "Установление авторства анонимного текста методами стилометрии и ML"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "spacy>=3.7",
    "sentence-transformers>=2.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "scipy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
authorship-ui = "src.ui.app:main"
