[project]
name = "authorship-attribution"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "spacy>=3.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "scipy>=1.12",
    "huggingface_hub>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
authorship-ui = "src.ui.app:main"
